# N-Wouda.github.io

./: .gitignore  CNAME  README.md  archive.html  conf.py  index.html  index.md  pyproject.toml  requirements.txt  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
.github/workflows/: main.yml
2020/: index.html
2021/: index.html
2022/: index.html
2023/: index.html
2024/: index.html
2025/: index.html
assets/css/: all-nocdn.css  all.css  custom.css  ipynb.css
blog/: index.html
categories/: index.html
galleries/: index.html  rss.xml
listings/: index.html
pages/: about.md  index.html  index.md  links.md  projects.md  resources.md
pages/about/: index.html  index.md
pages/links/: index.html
pages/projects/: index.html  index.md
pages/resources/: index.html  index.md
posts/: 2d-bin-packing-of-unequal-circles.ipynb  an-iterated-local-search-metaheuristic-using-alns-and-pyvrp.ipynb  automated-test-generation-in-python.ipynb  concolic-testing-in-python.ipynb  gurobi.env  plans-for-2025.md  population-and-market-integration-in-the-roman-hinterland.ipynb  profiling-python-code.ipynb  pyvrp-in-2024-and-2025.md  revealed-preference-for-the-partial-order-problem.md  set-operations-using-bit-arrays.md  tail-call-optimisation-in-python-using-ast.ipynb  test.md
posts/2d-bin-packing-of-unequal-circles/: index.html  index.ipynb
posts/an-iterated-local-search-metaheuristic-using-alns-and-pyvrp/: index.html
posts/plans-for-2024/: index.html  index.md
posts/plans-for-2025/: index.html
posts/plans-for-the-new-year/: index.html  index.md
(+20 files in other folders)
