[tool.poetry]
name = "nielswouda-com"
version = "1.0.0"
description = "Dependencies for (most of) my blog posts."
authors = ["Niels Wouda <nielswouda@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pyvrp = "^0.5.0"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
alns = "5.3.2"
jupyter = "^1.0.0"
gurobipy = "^10.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
